<resources>
    <string name="app_name">CustomCardGame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Info</string>

    <string name="menu_home">Home</string>
    <string name="menu_cards">Cartes</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_in_game">In Game</string>


    <string name="create_room">Créer un salon</string>
    <string name="join_room">Rejoindre un salon</string>

    <string name="login_key">LOGIN_KEY</string>
    <string name="notes_key">NOTES_KEY</string>

    <string name="title_main">A quoi sert cette application ?</string>
    <string name="description_main">Cette application vous permet de créer des parties pour assigner des rôles secrets de façon manuelle ou aléatoire à d\'autres personnes, notamment pour les jeux du style loups-garous de Thiercelieux.\n\nAttention ! Pour faire fonctionner l\'application, il faut activer la WiFi !</string>
    <string name="title_how_to_use">Comment utiliser l\'application ?</string>
    <string name="sub_title_create_cards">Création de cartes rôles</string>
    <string name="description_create_cards">Pour commencer, il faut créer les rôles que le maitre du jeu souhaite affecter aux autres joueurs. \n\nPour ça, il faut cliquer sur les trois barres verticales en haut à gauche dans le menu principal, puis sur le bouton cartes. Vous pourrez ensuite ajouter une nouvelle carte rôle en cliquant sur le bouton \'+\' et lui donner un titre, une description, et une image si vous le souhaitez.\nPour supprimer un rôle, restez appuyé sur la ligne correspondante.</string>
    <string name="sub_title_create_room">Création d\'un salon</string>
    <string name="description_create_room">Après avoir créé les cartes, le maitre du jeu doit créer un salon dans le menu principal. Il peut alors choisir le nombre de cartes qu\'il souhaite mettre en jeu par catégorie (exemple : 3 villageois&#8230;)\n\nPendant ce temps, les autres joueurs peuvent rejoindre le salon créé par le maitre du jeu. Le nom du salon sera le nom que le maitre du jeu a noté au moment de le créer.\n\nUne fois que tous les joueurs ont rejoins, et que le maitre du jeu a créer suffisament de cartes pour les joueurs, il peut démarrer la partie. Les cartes seront affectées de manière aléatoire aux joueurs présents, qui pourront voir leurs rôles en restant appuyé sur la carte.</string>
    <string name="sub_title_in_game">En jeu</string>
    <string name="description_in_game">Une fois le salon rejoint, tous les joueurs peuvent ouvrir l\'onglet "in game" dans le menu des trois barres verticales. Vous y verrez les différentes cartes ajoutées par le maitre du jeu, et pourrez voir les détails de ces cartes en cliquant dessus pour voir leurs effets.\n</string>

    <string name="numberOfPlayer">Nombre de joueurs : %1$s</string>
    <string name="playerNames">Joueurs présents : %1$s</string>
    <string name="noPlayers">Aucun joueur présent</string>
</resources>
