<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.customcardgame.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cards"
        android:name="com.example.customcardgame.ui.cards.CardsFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.customcardgame.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />


    <fragment
        android:id="@+id/nav_in_game"
        android:name="com.example.customcardgame.ui.in_game.InGameFragment"
        android:label="@string/menu_in_game"
        tools:layout="@layout/fragment_in_game" />

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.example.customcardgame.ui.info.InfoFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_info" />-->
</navigation>